<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent" >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.detail.DetailStoryActivity">

    <ImageView
        android:id="@+id/img_detail"
        android:layout_width="wrap_content"
        android:background="@drawable/sample_list_story"
        android:layout_height="300dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_detail" />

    <TextView
        android:id="@+id/desk_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/desk_app"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/name_detail"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/posted_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_time"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintTop_toBottomOf="@id/desk_detail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>