<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="10dp"
    android:layout_gravity="center"
    android:padding="5dp" >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/iv_item_photo"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:scaleType="fitXY"
        android:src="@drawable/sample_list_story"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/desk_app"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/iv_item_photo"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/time_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_time"
        android:textStyle="bold"
        android:textSize="12sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toBottomOf="@id/tv_item_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>