<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.login.LoginActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/language_fab"
        android:layout_width="wrap_content"
        app:layout_anchor="@id/content_layout"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_baseline_language_24"
        app:layout_anchorGravity="bottom|end"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="NotSibling" />

    <ProgressBar
        android:id="@+id/progress_Bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/img_login"
        android:layout_width="320dp"
        android:layout_height="270dp"
        android:src="@drawable/img_main_write"
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/app_name" />


    <TextView
        android:id="@+id/welcome_login"
        android:text="@string/welcome_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginStart="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_login" />

    <TextView
        android:id="@+id/salam_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/greetings"
        android:textSize="17sp"
        android:layout_marginTop="3dp"
        android:layout_marginStart="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_login" />

    <TextView
        android:id="@+id/text_email_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_email"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/salam_login" />

    <com.riski.mystorylife.customview.EditTextEmail
        android:id="@+id/login_email"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_bg_email"
        android:clickable="true"
        android:drawableStart="@drawable/ic_baseline_alternate_email_24"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:drawablePadding="5dp"
        android:layout_marginTop="5dp"
        android:paddingEnd="5dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_email_login"
        android:focusable="true" />

    <TextView
        android:id="@+id/text_password_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_password"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginStart="50dp"
        app:layout_constraintTop_toBottomOf="@id/login_email"
        app:layout_constraintStart_toStartOf="parent" />

    <com.riski.mystorylife.customview.EditTextPassword
        android:id="@+id/login_password"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawablePadding="5dp"
        android:clickable="true"
        android:background="@drawable/ic_bg_email"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_password_login"
        android:focusable="true" />
    
    <com.riski.mystorylife.customview.ButtonLogin
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/login_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/ready_account"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/register_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Register"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintTop_toBottomOf="@id/create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>