<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.register.RegisterActivity">

    <ProgressBar
        android:id="@+id/progress_Bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyle"
        tools:visibility="visible"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/language_fab"
        android:layout_width="wrap_content"
        app:layout_anchor="@id/content_layout"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_baseline_language_24"
        app:layout_anchorGravity="bottom|end"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="NotSibling" />

    <ImageView
        android:id="@+id/img_register"
        android:layout_width="320dp"
        android:layout_height="300dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/register"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/welcome_layout"
        android:layout_marginTop="40dp"
        android:layout_marginStart="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_register" />

    <TextView
        android:id="@+id/text_welcome1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/welcome1_layout"
        android:layout_marginTop="5dp"
        android:maxLines="2"
        android:ellipsize="end"
        android:layout_marginStart="50dp"
        app:layout_constraintTop_toBottomOf="@id/text_welcome"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/name_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_register"
        android:layout_marginTop="5dp"
        android:layout_marginStart="50dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_welcome1" />

    <com.riski.mystorylife.customview.EditTextRegisterName
        android:id="@+id/register_name"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/ic_bg_email"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="5dp"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_register" />

    <TextView
        android:id="@+id/text_email_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_email"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/register_name"
        app:layout_constraintStart_toStartOf="parent" />

    <com.riski.mystorylife.customview.EditTextEmail
        android:id="@+id/register_email"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/ic_bg_email"
        android:drawableStart="@drawable/ic_baseline_alternate_email_24"
        android:drawablePadding="5dp"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textColorHint="#757575"
        android:paddingEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_email_register" />

    <TextView
        android:id="@+id/text_password_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_password"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/register_email"
        app:layout_constraintStart_toStartOf="parent" />

    <com.riski.mystorylife.customview.EditTextPassword
        android:id="@+id/register_password"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/ic_bg_email"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="5dp"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_password_register" />

    <com.riski.mystorylife.customview.ButtonRegister
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/register_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_account"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_register" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Register"
        android:layout_marginBottom="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/have_account" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>